Issue #17097: Make multiprocessing ignore EINTR.